// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`neoform change field 1`] = `
<input
  name="firstName"
  onChange={[Function]}
  value="hey from tests"
/>
`;

exports[`neoform change field in array 1`] = `
<input
  name="friends.0.lastName"
  onChange={[Function]}
  value="hey from tests"
/>
`;

exports[`neoform values 1`] = `
<input
  name="firstName"
  onChange={[Function]}
  value="John"
/>
`;

exports[`neoform values 2`] = `
<input
  name="lastName"
  onChange={[Function]}
  value="Doe"
/>
`;

exports[`neoform values 3`] = `
<input
  name="friends.0.firstName"
  onChange={[Function]}
  value="Pepe"
/>
`;

exports[`neoform values 4`] = `
<input
  name="friends.0.lastName"
  onChange={[Function]}
  value="Sad"
/>
`;

exports[`neoform values 5`] = `
<input
  name="friends.1.firstName"
  onChange={[Function]}
  value=""
/>
`;

exports[`neoform values 6`] = `
<input
  name="friends.1.lastName"
  onChange={[Function]}
  value="Darkness"
/>
`;
